@@ -3,8 +3,12 @@ Revision history for Perl extension Cpanel::JSON::XS
 TODO: http://stevehanov.ca/blog/index.php?id=104 compression
 
 3.0220 2016-10-?? (rurban)
-	- add comprehensive JSON decode testsuite from http://seriot.ch/parsing_json.html
-        - decode with BOM (UTF-8, UTF-16, or UTF-32). For now only UTF-8, the others error.
+	- add comprehensive JSON decode spectests from
+          http://seriot.ch/parsing_json.html. #72
+        - decode with BOM (UTF-8, UTF-16, or UTF-32). For now only UTF-8,
+          the others error.
+        - fixed detection of final \0 as illegal non-whitespace garbage. Fixes
+          spectest 'n_number_then_00'. #72
 
 3.0219 2016-10-26 (rurban)
 	- workaround mingw 4.0 modfl() bug [perl #125924]
